UI improvement add button ClearFilters

--- a/BlazorTool.Client/Components/ActivityDisplay.razor
+++ b/BlazorTool.Client/Components/ActivityDisplay.razor
@@ -9,9 +9,12 @@
         <span class="activity-workload" title="@Localizer["ActivityDisplay_WorkLoad"]">@ActivityItem.WorkLoad.ToString("F2") @Localizer["ActivityDisplay_HoursAbbreviation"]</span>
         <span class="activity-workers" title="@Localizer["ActivityDisplay_Workers"]">@ActivityItem.Workers</span>
         <div class="activity-persons" title="@Localizer["ActivityDisplay_AssignedPersons"]">
-            <button class="add-person-btn" @onclick="() => OnClick.InvokeAsync(ActivityItem.ActivityID)" title="@Localizer["ActivityDisplay_AddPerson"]">
-                +
-            </button>
+            @if(isEditable)
+            {
+                <button class="add-person-btn" @onclick="() => OnClick.InvokeAsync(ActivityItem.ActivityID)" title="@Localizer["ActivityDisplay_AddPerson"]">
+                 +
+                </button>
+            }
             @String.Join(", ", Persons?.Select(p => p.Name).ToList() ?? new List<string>())
         </div>
         <span class="activity-date" title="@Localizer["ActivityDisplay_DateAdded"]">@ActivityItem.AddDate.ToString("dd.MM.yyyy HH:mm")</span>
@@ -24,6 +27,8 @@
     public Activity? ActivityItem { get; set; }
     [Parameter]
     public List<Person>? Persons { get; set; }
+    [Parameter]
+    public bool isEditable { get; set; } = false;   
     [Parameter]
     public EventCallback<int> OnClick { get; set; }
 }
