--- a/BlazorTool.Client/Components/WorkOrderComponent.razor
+++ b/BlazorTool.Client/Components/WorkOrderComponent.razor
@@ -11,9 +11,9 @@
   @if(WorkOrder != null)
         {
     <!-- HEADER -->
-        <CardHeader Class="d-flex justify-content-between align-items-center flex-wrap p-3">
+        <CardHeader Class="d-flex justify-content-between align-items-center flex-wrap p-2">
 
-            <div class="custom-highlight fs-5 p-3 rounded">
+            <div class="custom-highlight fs-5 p-2 rounded">
                 <div class="@DeviceAlarm">
                     <strong>@Localizer["Device"]: </strong>
                     @if (isNewWorkOrder && isEditable)
@@ -21,7 +21,7 @@
                         <TelerikComboBox Data="@ListDevices"
                                          ValueField="@nameof(Device.MachineID)"
                                          TextField="@nameof(Device.AssetNo)"
-                                         Placeholder="Select device..."
+                                         Placeholder=@Localizer["Scheduler_SelectAsset"]
                                          ValueChanged="@((int devId) => OnDeviceChanged(devId))"
                                          Width="250px"
                                          ShowClearButton="false"
@@ -39,7 +39,7 @@
             </div>
 
             <div>
-                <span class="badge @StateColor fs-3">
+                <span class="badge @StateColor fs-3 shadow">
                     @WorkOrder.WOState
                 </span>
             </div>
@@ -49,14 +49,14 @@
     <!-- INFO CARDS GRID -->
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3 mt-2">
         <!-- Description -->
-        <div class="col">
+        <div class="col ">
             <TelerikCard Class="h-100">
                 <CardHeader Class="py-1 px-2">
                     <CardTitle>@Localizer["WorkOrder_DescriptionTitle"]</CardTitle>
                 </CardHeader>
                 <CardBody Class="p-2 card-body-description">
                     <div class="field-group ">
-                        <label>@Localizer["WorkOrder_Description"]</label>
+                        <label>@Localizer[nameof(WorkOrder.WODesc)]:</label>
                         <div class="control-wrapper">
                             <TelerikTextArea @bind-Value="@WorkOrder.WODesc"
                                              ReadOnly="@(isEditable == false)"
@@ -67,7 +67,7 @@
                         </div>
                     </div>
                     <div class="field-group">
-                        <label>@Localizer["WorkOrder_Category"]</label>
+                        <label>@Localizer[nameof(WorkOrder.WOCategory)]:</label>
                         <div class="control-wrapper">
                             <TelerikComboBox Data="@ListCategories"
                                              ValueField="@nameof(Dict.Id)"
@@ -79,12 +79,13 @@
                                              ReadOnly="@(isEditable == false)"
                                              ShowClearButton="false"
                                              AllowCustom="false"
+                                             Size="@cb_size"
                                              Class="@CategoryAlarm">
                             </TelerikComboBox>
                         </div>
                     </div>
                     <div class="field-group">
-                        <label>@Localizer["Reason"]</label>
+                        <label>@Localizer[nameof(WorkOrder.WOReason)]:</label>
                         <div class="control-wrapper">
                             <TelerikComboBox Data="@ListReasons"
                                              ValueField="@nameof(Dict.Id)"
@@ -96,12 +97,13 @@
                                              ReadOnly="@(isEditable == false)"
                                              ShowClearButton="false"
                                              AllowCustom="false"
+                                                 Size="@cb_size"
                                              Class="@ReasonAlarm">
                             </TelerikComboBox>
                         </div>
                     </div>
                     <div class="field-group">
-                        <label>@Localizer["WorkOrder_Level"]</label>
+                        <label>@Localizer[nameof(WorkOrder.WOLevel)]:</label>
                         <div class="control-wrapper">
                             <TelerikComboBox Data="@ListLevels"
                                              ValueField="@nameof(Dict.Id)"
@@ -113,6 +115,7 @@
                                              ReadOnly="@(isEditable == false)"
                                              ShowClearButton="false"
                                              AllowCustom="false"
+                                                 Size="@cb_size"
                                              Class="@LevelAlarm">
                             </TelerikComboBox>
                         </div>
@@ -122,14 +125,14 @@
         </div>
 
         <!-- Executors -->
-        <div class="col">
+        <div class="col ">
             <TelerikCard Class="h-100">
                 <CardHeader Class="py-1 px-2">
                     <CardTitle>@Localizer["WorkOrder_Executors"]</CardTitle>
                 </CardHeader>
                 <CardBody Class="p-2">
                     <div class="field-group">
-                        <label>@Localizer["WorkOrder_AssignedPerson"]</label>
+                        <label>@Localizer[nameof(WorkOrder.AssignedPerson)]:</label>
                             <TelerikComboBox Data="@ListPersons"
                                              Value="@WorkOrder.AssignedPerson"
                                              Placeholder="@Localizer["WorkOrder_SelectPerson"]"
@@ -137,11 +140,11 @@
                                              Width="100%"
                                              ReadOnly=@(isEditable == false)
                                              ShowClearButton=true
-                                                 >
+                                             Size="@cb_size">
                             </TelerikComboBox>
                     </div>
                     <div class="field-group" >
-                            <label>@Localizer["WorkOrder_Department"]</label>
+                            <label>@Localizer[nameof(WorkOrder.DepName)]:</label>
                                 <TelerikComboBox Data="@ListDepartments"
                                                  Value="@WorkOrder.DepName"
                                                  ValueField="Name"
@@ -150,13 +153,13 @@
                                                  ValueChanged="@((string name) => OnDepartmentChanged(name))"
                                                  Width="100%"
                                                  ReadOnly=@(isEditable == false)
-                                                 ShowClearButton=true                                
-                                >
+                                                 ShowClearButton=true
+                                             Size="@cb_size">
                                                  
                                 </TelerikComboBox>
                     </div>
                     <div class="field-group">
-                        <label>@Localizer["TakePersons"]</label>
+                            <label>@Localizer[nameof(WorkOrder.TakePersons)]:</label>
                         <div class="field-value">@(string.IsNullOrEmpty(takePersons) ? @Localizer["WorkOrder_NotSpecified"] : takePersons)</div>
                     </div>
                 </CardBody>
@@ -164,7 +167,7 @@
         </div>
 
         <!-- Dates -->
-        <div class="col">
+        <div class="col ">
             <TelerikCard Class="h-100">
                 <CardHeader Class="py-1 px-2">
                     <CardTitle>@Localizer["WorkOrder_Dates"]</CardTitle>
@@ -172,11 +175,11 @@
                 <CardBody Class="p-2">
                     <div class="dates-grid">
                         <div class="date-item">
-                            <label class="@DatesAlarm">@Localizer["WorkOrder_Start"]</label>
+                                <label class="@DatesAlarm">@Localizer[nameof(WorkOrder.StartDate)]:</label>
                                 <TelerikDateTimePicker @bind-Value="@WorkOrder.StartDate"
                                                        OnChange="@(OnDateChanged)"
                                                        Width="100%"
-                                                       Size="sm" 
+                                                       Size="@cb_size"
                                                        ReadOnly=@(isEditable == false)
                                                        Class="@DatesAlarm"
                                                        Format="@dateTimeFormat"
@@ -185,11 +188,11 @@
                                                        </TelerikDateTimePicker>
                         </div>
                         <div class="date-item">
-                            <label>@Localizer["WorkOrder_End"]</label>
+                                <label>@Localizer[nameof(WorkOrder.EndDate)]:</label>
                                 <TelerikDateTimePicker @bind-Value="@WorkOrder.EndDate"
                                                        OnChange="@(OnDateChanged)"
                                                        Width="100%"
-                                                       Size="sm" 
+                                                       Size="@cb_size"
                                                        ReadOnly=@(isEditable == false)
                                                        Class="@DatesAlarm"
                                                        Format="@dateTimeFormat"
@@ -260,13 +263,16 @@
                         <div class="stat-label-cost">@Localizer[nameof(WorkOrder.Cost)]</div>
                 </div>
             </div>
-            <div class="activity-controls">
-                <TelerikButton OnClick="@(() => IsAddActivityWindowVisible = true)" Icon="@SvgIcon.Plus" ThemeColor="primary">@Localizer["WorkOrder_AddActivity"]</TelerikButton>
-            </div>
+                @if (isEditable)
+                {
+                    <div class="activity-controls">
+                        <TelerikButton OnClick="@(() => IsAddActivityWindowVisible = true)" Icon="@SvgIcon.Plus" ThemeColor="primary">@Localizer["WorkOrder_AddActivity"]</TelerikButton>
+                    </div>
+                }
             <div>
                 @if (showActivities)
                 {
-                    <ActivityList @ref="activityListComponent" WorkOrderId="WorkOrder.WorkOrderID" />
+                    <ActivityList @ref="activityListComponent" WorkOrderId="WorkOrder.WorkOrderID" isEditable="@isEditable" />
                 }
             </div>
 
@@ -352,6 +358,7 @@
     private List<Dict> ListReasons = new List<Dict>();
     private string takePersons = string.Empty;
     private string StateColor = string.Empty;
+    private string cb_size = "sm";
 
     protected override async Task OnInitializedAsync()
     {
