--- a/BlazorTool.Client/Pages/SchedulerPage.razor.css
+++ b/BlazorTool.Client/Pages/SchedulerPage.razor.css
@@ -62,3 +62,12 @@
     width: 100%;
     height: 100%;
 }
+
+.ClearFilters-btn {
+    display: flex;
+    align-items: end;
+}
+    .ClearFilters-btn button{
+       
+        border-radius: 6px;
+    }
